# engcheat

./: .gitignore  Pipfile  README.md  index.html  main.py  makefile
.github/workflows/: nextjs.yaml
audio/: Cargo.toml  makefile  readme.md  voice.csv
audio/src/: audio_concat.rs  find.rs  main.rs  script.rs  speech.rs
data/20240424_shopping-when-were-hungry-may-cost-us-more/: out.json
data/20240425_bicycles-now-more-popular-than-cars-in-central-paris/: out.json
data/20240427_swim-and-scrub-olympic-triathletes-prepare-for-dirty-seine/: out.json
data/20240428_japan-sees-record-3-million-tourist-arrivals-in-march/: out.json
data/20240429_amsterdam-to-limit-tourist-numbers-ban-new-hotels/: out.json
data/20240501_branching-out-italian-town-plans-to-fine-tree-climbers/: out.json
data/20240503_canadian-grandmother-breaks-womens-planking-record/: out.json
data/20240504_meet-the-australian-sailor-popeye-the-pumpkin-man/: out.json
data/20240505_professional-networking-how-to-do-it-online/: out.json
data/20240505_when-does-old-age-begin-people-cant-decide/: out.json
data/20240506_japanese-town-puts-up-net-to-stop-fuji-photos/: out.json
data/20240507_nature-of-hope-90-photographers-honor-jane-goodall/: out.json
data/20240507_singaporean-workers-say-flexible-work-or-i-quit/: out.json
data/20240513_many-uk-adults-enjoy-reading-ya-fiction/: out.json
dmm/: main.py  print.py  table20240630  test  test.html
frontend/: .gitignore  MEMO.md  makefile  next.config.mjs  package-lock.json  package.json
paper/: Cargo.toml  makefile
sandbox00/: Cargo.toml
(+151 files in other folders)
