[package]
name = "audio"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
google-cloud-texttospeech-v1 = "^1" # 公式クライアント
futures = "^0"